<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calculative_skills_main_bg_p"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#75FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="#4A026E"
        android:focusable="auto"
        android:text="@string/new_game"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#401010"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="#FCAF17"
        android:focusable="auto"
        android:text="@string/about"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/newGameButton"
        app:layout_constraintStart_toStartOf="@+id/newGameButton"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_calculative_skills_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>